Fix body width scale on mobile

--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -89,14 +89,14 @@ $control-icon-size: .8rem;
 $control-width-xs: 180px;
 $control-width-sm: 320px;
 $control-width-md: 640px;
-$control-width-lg: 960px;
+$control-width-lg: 980px;
 $control-width-xl: 1200px;
 
 // Responsive breakpoints
 $size-xs: 480px;
 $size-sm: 600px;
 $size-md: 840px;
-$size-lg: 960px;
+$size-lg: 980px;
 $size-xl: 1200px;
 $size-2x: 1440px;
 
